# expert_system

./: diets.txt  index.html  medical_expert_system.py  pyproject.toml
answers/: diabetic_diet.txt  diet_for_weight_loss.txt  gluten_free_diet.txt  usual_diet.txt  vegan_diet.txt
diet_descriptions/: diabetic_diet.txt  diet_for_weight_loss.txt  gluten_free_diet.txt  usual_diet.txt  vegan_diet.txt
